kubernetes/applications/influxdb/base/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: influxdb
  namespace: influxdb
  annotations:
    # ExternalDNS configuration for Cloudflare
    external-dns.alpha.kubernetes.io/target: udm-pro.zimmermann.sh
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    kubernetes.io/ingress.class: traefik
    # Homepage Service Discovery
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Data & AI"
    gethomepage.dev/name: "InfluxDB"
    gethomepage.dev/icon: "influxdb.png"
    gethomepage.dev/weight: "2"
    gethomepage.dev/href: "https://PLACEHOLDER"

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`PLACEHOLDER`)
      priority: 10
      middlewares:
        - name: chain-mfa-auth
          namespace: ingress-controller
      services:
        - kind: Service
          name: influxdb-explorer
          port: 80
  tls:
    secretName: influxdb-tls-cert
